# Calculator

./: CMakeLists.txt  README.md  builder.css  builder.ui  builder.ui~  calculator.c  calculator.h  calculator.ui  calculator.ui~  cases.txt  console_ui.c  console_ui.h  gtk_ui.c  gtk_ui.h  main.c  operation.c  operation.h  ui.h  unit_test_ui.c  unit_test_ui.h
include/: io_utils.h  time_utils.h
